#1 UI improvements, usermanagement screens,dimens.  -GSR

--- a/app/src/main/res/layout/fragment_forgot_password_reset.xml
+++ b/app/src/main/res/layout/fragment_forgot_password_reset.xml
@@ -7,109 +7,107 @@
     android:background="@drawable/material_dark"
     tools:context=".userManagement.forgotPasswordResetFragment">
 
-        <RelativeLayout
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/um_bottom_spacing"
+        android:paddingLeft="@dimen/um_side_spacing"
+        android:paddingRight="@dimen/um_side_spacing"
+        android:paddingTop="@dimen/um_top_spacing">
+
+        <TextView
+            android:id="@+id/forgotPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:gravity="center_horizontal"
+
+            android:padding="@dimen/um_padding_shadow"
+            android:shadowColor="@color/um_shadow_color"
+            android:shadowDx="5"
+
+            android:shadowDy="5"
+            android:shadowRadius="15"
+            android:text="@string/forgot_password"
+            android:textColor="@color/primaryTextColor"
+            android:textSize="@dimen/um_fp_heading_text_size" />
+
+        <TextView
+            android:id="@+id/resetYourPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/forgotPassword"
+            android:layout_centerHorizontal="true"
+
+
+            android:shadowColor="@color/um_shadow_color"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="24"
+
+            android:text="@string/fill_the_form_to_reset_your_password"
+            android:textColor="@color/primaryTextColor"
+            android:textSize="@dimen/um_subheading_text_size" />
+
+        <!--Password Entry-->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/password_inputLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/um_side_spacing"
-            android:paddingRight="@dimen/um_side_spacing"
-            android:paddingTop="@dimen/um_top_spacing"
-            android:paddingBottom="@dimen/um_bottom_spacing"
-            >
+            android:layout_below="@id/resetYourPassword"
+            android:layout_marginTop="@dimen/um_fp_form_heading_spacing"
+            android:hint="@string/new_password"
+            app:passwordToggleEnabled="true">
 
-            <TextView
-                android:id="@+id/forgotPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:layout_centerHorizontal="true"
-
-                android:padding="@dimen/um_padding_shadow"
-                android:shadowColor="@color/um_shadow_color"
-                android:shadowDx="5"
-
-                android:shadowDy="5"
-                android:shadowRadius="15"
-                android:text="@string/forgot_password"
-                android:textColor="@color/primaryTextColor"
-                android:textSize="@dimen/um_fp_heading_text_size" />
-
-            <TextView
-                android:id="@+id/resetYourPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/forgotPassword"
-                android:layout_centerHorizontal="true"
-
-
-                android:shadowColor="@color/um_shadow_color"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="24"
-
-                android:text="@string/fill_the_form_to_reset_your_password"
-                android:textColor="@color/primaryTextColor"
-                android:textSize="@dimen/um_subheading_text_size" />
-
-            <!--Password Entry-->
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/password_inputLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/password_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/resetYourPassword"
-                android:layout_marginTop="@dimen/um_fp_form_heading_spacing"
-                android:hint="@string/new_password"
-                app:passwordToggleEnabled="true">
+                android:layout_below="@id/email_editText"
+                android:drawableLeft="@drawable/ic_password_solid"
+                android:inputType="textPassword"
+                tools:ignore="RtlHardcoded" />
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/password_editText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/email_editText"
-                    android:drawableLeft="@drawable/ic_password_solid"
-                    android:inputType="textPassword"
-                    tools:ignore="RtlHardcoded" />
+        </android.support.design.widget.TextInputLayout>
 
-            </android.support.design.widget.TextInputLayout>
+        <!--Confirm Password Entry-->
 
-            <!--Confirm Password Entry-->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/confPassword_inputLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/password_inputLayout"
+            android:hint="@string/confirm_new_password"
+            app:passwordToggleEnabled="true">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/confPassword_inputLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/confPassword_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/password_inputLayout"
-                android:hint="@string/confirm_new_password"
-                app:passwordToggleEnabled="true">
+                android:layout_below="@id/email_editText"
+                android:drawableLeft="@drawable/ic_password_solid"
+                android:inputType="textPassword"
+                tools:ignore="RtlHardcoded"
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/confPassword_editText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/email_editText"
-                    android:drawableLeft="@drawable/ic_password_solid"
-                    android:inputType="textPassword"
-                    tools:ignore="RtlHardcoded"
+                />
 
-                    />
-
-            </android.support.design.widget.TextInputLayout>
+        </android.support.design.widget.TextInputLayout>
 
 
+        <android.support.design.button.MaterialButton
+            android:id="@+id/changePasswordBtn"
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/confPassword_inputLayout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/um_btn_top_spacing"
+            android:text="@string/change"
+            app:rippleColor="@color/primaryColor" />
 
-            <android.support.design.button.MaterialButton
-                android:id="@+id/changePasswordBtn"
-                style="@style/Widget.MaterialComponents.Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/confPassword_inputLayout"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/um_btn_top_spacing"
-                android:text="@string/change"
-                app:rippleColor="@color/primaryColor" />
-
-        </RelativeLayout>
+    </RelativeLayout>
 
 
 </ScrollView>
