--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -7,87 +7,86 @@
     android:background="@drawable/material_dark"
     tools:context=".userManagement.forgotPasswordFragment">
 
-        <RelativeLayout
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/um_bottom_spacing"
+        android:paddingLeft="@dimen/um_side_spacing"
+        android:paddingRight="@dimen/um_side_spacing"
+        android:paddingTop="@dimen/um_top_spacing">
+
+        <TextView
+            android:id="@+id/forgotPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/um_side_spacing"
-            android:paddingRight="@dimen/um_side_spacing"
-            android:paddingTop="@dimen/um_top_spacing"
-            android:paddingBottom="@dimen/um_bottom_spacing"
-            >
 
-            <TextView
-                android:id="@+id/forgotPassword"
+            android:layout_centerHorizontal="true"
+            android:gravity="center_horizontal"
+            android:padding="@dimen/um_padding_shadow"
+            android:shadowColor="@color/um_shadow_color"
+            android:shadowDx="5"
+
+            android:shadowDy="5"
+            android:shadowRadius="15"
+            android:text="@string/forgot_password"
+            android:textColor="@color/primaryTextColor"
+
+            android:textSize="@dimen/um_fp_heading_text_size"
+
+
+            />
+
+        <TextView
+            android:id="@+id/resetYourPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/forgotPassword"
+            android:layout_centerHorizontal="true"
+
+
+            android:shadowColor="@color/um_shadow_color"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="24"
+
+            android:text="@string/fill_the_form_to_reset_your_password"
+            android:textColor="@color/primaryTextColor"
+            android:textSize="@dimen/um_subheading_text_size" />
+
+        <!--Email Entry-->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/email_inputLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/resetYourPassword"
+            android:layout_marginTop="@dimen/um_fp_form_heading_spacing"
+            android:hint="@string/email_address"
+            app:errorEnabled="true"
+            app:helperText="Email Address Associated With Your Account"
+            app:helperTextEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/email_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_alt_email"
+                android:inputType="textEmailAddress"
+                tools:ignore="RtlHardcoded" />
 
-                android:gravity="center_horizontal"
-                android:layout_centerHorizontal="true"
-                android:padding="@dimen/um_padding_shadow"
-                android:shadowColor="@color/um_shadow_color"
-                android:shadowDx="5"
+        </android.support.design.widget.TextInputLayout>
 
-                android:shadowDy="5"
-                android:shadowRadius="15"
-                android:text="@string/forgot_password"
-                android:textColor="@color/primaryTextColor"
+        <android.support.design.button.MaterialButton
+            android:id="@+id/ContinueBtn"
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/email_inputLayout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/um_btn_top_spacing"
+            android:text="@string/continue1"
+            app:rippleColor="@color/primaryColor" />
 
-                android:textSize="@dimen/um_fp_heading_text_size"
-
-
-                />
-
-            <TextView
-                android:id="@+id/resetYourPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/forgotPassword"
-                android:layout_centerHorizontal="true"
-
-
-                android:shadowColor="@color/um_shadow_color"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="24"
-
-                android:text="@string/fill_the_form_to_reset_your_password"
-                android:textColor="@color/primaryTextColor"
-                android:textSize="@dimen/um_subheading_text_size" />
-
-            <!--Email Entry-->
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/email_inputLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/resetYourPassword"
-                android:layout_marginTop="@dimen/um_fp_form_heading_spacing"
-                android:hint="@string/email_address"
-                app:errorEnabled="true"
-                app:helperText="Email Address Associated With Your Account"
-                app:helperTextEnabled="true">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/email_editText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_alt_email"
-                    android:inputType="textEmailAddress"
-                    tools:ignore="RtlHardcoded" />
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.button.MaterialButton
-                android:id="@+id/ContinueBtn"
-                style="@style/Widget.MaterialComponents.Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/email_inputLayout"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/um_btn_top_spacing"
-                android:text="@string/continue1"
-                app:rippleColor="@color/primaryColor" />
-
-        </RelativeLayout>
+    </RelativeLayout>
 
 </ScrollView>
