--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,139 +7,137 @@
     android:background="@drawable/material_dark"
     tools:context=".userManagement.loginFragment">
 
-        <RelativeLayout
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/um_bottom_spacing"
+        android:paddingLeft="@dimen/um_side_spacing"
+        android:paddingRight="@dimen/um_side_spacing"
+        android:paddingTop="@dimen/um_top_spacing">
+
+        <TextView
+            android:id="@+id/signInHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+
+            android:padding="@dimen/um_padding_shadow"
+            android:shadowColor="@color/um_shadow_color"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="24"
+
+            android:text="@string/sign_in_heading"
+            android:textColor="@color/primaryTextColor"
+            android:textSize="@dimen/um_fp_main_heading_text_size" />
+
+        <TextView
+            android:id="@+id/signInSubHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/signInHeader"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/um_subheading_spacing_top"
+
+            android:padding="@dimen/um_padding_shadow"
+            android:shadowColor="@color/um_shadow_color"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="24"
+
+            android:text="@string/construction_project_management_SubHeading"
+            android:textColor="@color/primaryTextColor"
+            android:textSize="@dimen/um_subheading_text_size" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/email_inputLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/um_side_spacing"
-            android:paddingRight="@dimen/um_side_spacing"
-            android:paddingTop="@dimen/um_top_spacing"
-            android:paddingBottom="@dimen/um_bottom_spacing"
+            android:layout_below="@id/signInSubHeader"
+            android:layout_marginTop="@dimen/um_login_heading_spacing"
+            android:hint="@string/email_textBox_Placeholder"
+
             >
 
-            <TextView
-                android:id="@+id/signInHeader"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-
-                android:padding="@dimen/um_padding_shadow"
-                android:shadowColor="@color/um_shadow_color"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="24"
-
-                android:text="@string/sign_in_heading"
-                android:textColor="@color/primaryTextColor"
-                android:textSize="@dimen/um_fp_login_heading_text_size" />
-
-            <TextView
-                android:id="@+id/signInSubHeader"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/signInHeader"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/um_subheading_spacing_top"
-
-                android:padding="@dimen/um_padding_shadow"
-                android:shadowColor="@color/um_shadow_color"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="24"
-
-                android:text="@string/construction_project_management_SubHeading"
-                android:textColor="@color/primaryTextColor"
-                android:textSize="@dimen/um_subheading_text_size" />
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/email_inputLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/email_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/signInSubHeader"
-                android:layout_marginTop="@dimen/um_login_heading_spacing"
-                android:hint="@string/email_textBox_Placeholder"
+                android:drawableLeft="@drawable/ic_email"
+                tools:ignore="RtlHardcoded" />
+        </android.support.design.widget.TextInputLayout>
 
-                >
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/password_inputLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/email_inputLayout"
+            android:hint="@string/password_textBox_Placeholder"
+            app:passwordToggleEnabled="true">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/email_editText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_email"
-                    tools:ignore="RtlHardcoded" />
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/password_inputLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/password_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/email_inputLayout"
-                android:hint="@string/password_textBox_Placeholder"
-                app:passwordToggleEnabled="true">
+                android:layout_below="@id/email_editText"
+                android:drawableLeft="@drawable/ic_password_solid"
+                android:inputType="textPassword"
+                tools:ignore="RtlHardcoded"
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/password_editText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/email_editText"
-                    android:drawableLeft="@drawable/ic_password_solid"
-                    android:inputType="textPassword"
-                    tools:ignore="RtlHardcoded"
+                />
 
-                    />
+        </android.support.design.widget.TextInputLayout>
 
-            </android.support.design.widget.TextInputLayout>
+        <TextView
+            android:id="@+id/forgotPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/password_inputLayout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/um_login_options_form_spacing"
 
-            <TextView
-                android:id="@+id/forgotPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/password_inputLayout"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/um_login_options_form_spacing"
+            android:padding="@dimen/um_padding_shadow"
+            android:shadowColor="@color/um_shadow_color"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="24"
 
-                android:padding="@dimen/um_padding_shadow"
-                android:shadowColor="@color/um_shadow_color"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="24"
+            android:text="@string/forgot_password_signIn_form"
+            android:textColor="@color/primaryTextColor"
+            android:textSize="@dimen/um_login_option_text_size" />
 
-                android:text="@string/forgot_password_signIn_form"
-                android:textColor="@color/primaryTextColor"
-                android:textSize="@dimen/um_login_option_text_size" />
+        <TextView
+            android:id="@+id/dontHaveAccount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/forgotPassword"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/um_login_options_spacing_btwn"
 
-            <TextView
-                android:id="@+id/dontHaveAccount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/forgotPassword"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/um_login_options_spacing_btwn"
+            android:padding="@dimen/um_padding_shadow"
+            android:shadowColor="@color/um_shadow_color"
+            android:shadowDx="5"
+            android:shadowDy="5"
+            android:shadowRadius="24"
 
-                android:padding="@dimen/um_padding_shadow"
-                android:shadowColor="@color/um_shadow_color"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="24"
+            android:text="@string/don_t_have_an_account_sign_up"
+            android:textColor="@color/primaryTextColor"
+            android:textSize="@dimen/um_login_option_text_size" />
 
-                android:text="@string/don_t_have_an_account_sign_up"
-                android:textColor="@color/primaryTextColor"
-                android:textSize="@dimen/um_login_option_text_size" />
+        <android.support.design.button.MaterialButton
+            android:id="@+id/signInButton"
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/dontHaveAccount"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/um_signin_btn_topspacing"
+            android:text="@string/sign_in_btn_value"
+            app:rippleColor="@color/primaryColor" />
 
-            <android.support.design.button.MaterialButton
-                android:id="@+id/signInButton"
-                style="@style/Widget.MaterialComponents.Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/dontHaveAccount"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/um_signin_btn_topspacing"
-                android:text="@string/sign_in_btn_value"
-                app:rippleColor="@color/primaryColor" />
-
-        </RelativeLayout>
-
+    </RelativeLayout>
 
 
 </ScrollView>
