--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/background_1_cropped"
     tools:context=".userManagement.loginFragment">
 
     <RelativeLayout
@@ -135,6 +136,5 @@
             app:rippleColor="@color/primaryColor" />
 
     </RelativeLayout>
-
 
 </ScrollView>
