--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,10 @@
     <dimen name="um_fp_main_heading_text_size">72sp</dimen>
     <dimen name="um_login_option_text_size">16sp</dimen>
 
+
+    <!--dashboard test screen-->
+    <dimen name="gl_padding">20dp</dimen>
+    <dimen name="card_size">170dp</dimen>
+    <dimen name="cornerRadius">4dp</dimen>
+
 </resources>
