--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
   <color name="backgroundLight">#F5F5F6</color>
   <color name="backgroundDark">#e1e2e1</color>
     <color name="um_shadow_color">#000</color>
+
+  <color name="cardBackground">#212121</color>
 </resources>
