--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".miscellaneous.DashboardFragment"
-    android:background="@color/backgroundDark"
-    android:orientation="vertical"
-
-
-    android:paddingTop="?attr/actionBarSize"
-
     >
 
 <!--    <android.support.design.widget.AppBarLayout
@@ -27,17 +21,31 @@
     </android.support.design.widget.AppBarLayout>-->
 
 
-    <android.support.v7.widget.GridLayout
+    <!--Refered to https://stackoverflow.com/questions/10610943/gridlayout-scrollview
+        to get the scrolling to work with gridlayout. Out take-: hardcode gridlayout height
+    -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/backgroundDark"
+        >
+
+
+
+
+    <android.support.v7.widget.GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="900dp"
         android:background="@color/backgroundDark"
         android:scrollbars="vertical"
         android:padding="16dp"
 
         app:columnCount="2"
-        app:rowCount="3"
+        app:rowCount="6"
         app:columnOrderPreserved="false"
         app:useDefaultMargins="true"
+        app:alignmentMode="alignMargins"
 
         >
         <!--col1 row1-->
@@ -108,7 +116,7 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
-        <!--col1 row1-->
+        <!--col1 row2-->
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -142,7 +150,7 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
-        <!--col2 row1-->
+        <!--col2 row2-->
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -176,74 +184,6 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
-        <!--col1 row2-->
-        <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
-            app:cardBackgroundColor="@color/cardBackground"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="4dp"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/db_card_title"
-                    android:text="Milestones"
-                    android:textColor="@color/primaryTextColor"
-                    android:textAlignment="center" />
-
-                <ImageView
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/db_inventory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <!--col2 row2-->
-        <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
-            app:cardBackgroundColor="@color/cardBackground"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="4dp"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/db_card_title"
-                    android:text="Sample"
-                    android:textColor="@color/primaryTextColor"
-                    android:textAlignment="center" />
-
-                <ImageView
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/db_inventory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
         <!--col1 row3-->
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
@@ -265,7 +205,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/db_card_title"
-                    android:text="Sample"
+                    android:text="Milestones"
                     android:textColor="@color/primaryTextColor"
                     android:textAlignment="center" />
 
@@ -312,10 +252,212 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
+        <!--col1 row4-->
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            app:cardBackgroundColor="@color/cardBackground"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/db_card_title"
+                    android:text="Sample"
+                    android:textColor="@color/primaryTextColor"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/db_inventory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <!--col2 row4-->
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            app:cardBackgroundColor="@color/cardBackground"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/db_card_title"
+                    android:text="Sample"
+                    android:textColor="@color/primaryTextColor"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/db_inventory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <!--col1 row5-->
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            app:cardBackgroundColor="@color/cardBackground"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/db_card_title"
+                    android:text="Sample"
+                    android:textColor="@color/primaryTextColor"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/db_inventory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <!--col2 row5-->
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            app:cardBackgroundColor="@color/cardBackground"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/db_card_title"
+                    android:text="Sample"
+                    android:textColor="@color/primaryTextColor"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/db_inventory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+        <!--col1 row6-->
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            app:cardBackgroundColor="@color/cardBackground"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/db_card_title"
+                    android:text="Sample"
+                    android:textColor="@color/primaryTextColor"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/db_inventory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <!--col2 row6-->
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            app:cardBackgroundColor="@color/cardBackground"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="4dp"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/db_card_title"
+                    android:text="Sample"
+                    android:textColor="@color/primaryTextColor"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/db_inventory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
 
     </android.support.v7.widget.GridLayout>
 
+    </LinearLayout>
 
-
-</LinearLayout>
+</ScrollView>
