#1 Added missing files
      -GSR

--- a/app/src/main/res/layout/activity_secondary.xml
+++ b/app/src/main/res/layout/activity_secondary.xml
@@ -18,11 +18,14 @@
             app:titleTextColor="@color/primaryTextColor"
             app:title="@string/dashboard"
             android:elevation="8dp"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
             >
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
-    <!---->
+    <!-- Frame layout with spacings set aside for appbars
+     using margin top and bottom
+     -->
 
     <FrameLayout
         android:id="@+id/secondaryContainer"
