--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -22,7 +22,9 @@
 <android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/backgroundDark"
+    >
 
     <!--top appbar-->
     <android.support.design.widget.AppBarLayout
@@ -52,18 +54,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/backgroundDark"
+
         >
 
     <android.support.v7.widget.GridLayout
         android:layout_width="match_parent"
-        android:layout_height="900dp"
-        android:background="@color/backgroundDark"
+        android:layout_height="500dp"
         android:scrollbars="vertical"
-        android:padding="16dp"
+        android:padding="8dp"
 
         app:columnCount="2"
-        app:rowCount="6"
+        app:rowCount="3"
         app:columnOrderPreserved="false"
         app:useDefaultMargins="true"
         app:alignmentMode="alignMargins"
@@ -124,6 +125,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/db_card_title"
+                    android:maxLines="1"
                     android:text="Inventory"
                     android:textColor="@color/primaryTextColor"
                     android:textAlignment="center" />
@@ -238,244 +240,6 @@
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
-
-        <!--col2 row3-->
-        <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
-            app:cardBackgroundColor="@color/cardBackground"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="4dp"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/db_card_title"
-                    android:text="Sample"
-                    android:textColor="@color/primaryTextColor"
-                    android:textAlignment="center" />
-
-                <ImageView
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/db_inventory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <!--col1 row4-->
-        <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
-            app:cardBackgroundColor="@color/cardBackground"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="4dp"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/db_card_title"
-                    android:text="Sample"
-                    android:textColor="@color/primaryTextColor"
-                    android:textAlignment="center" />
-
-                <ImageView
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/db_inventory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <!--col2 row4-->
-        <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
-            app:cardBackgroundColor="@color/cardBackground"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="4dp"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/db_card_title"
-                    android:text="Sample"
-                    android:textColor="@color/primaryTextColor"
-                    android:textAlignment="center" />
-
-                <ImageView
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/db_inventory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <!--col1 row5-->
-        <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
-            app:cardBackgroundColor="@color/cardBackground"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="4dp"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/db_card_title"
-                    android:text="Sample"
-                    android:textColor="@color/primaryTextColor"
-                    android:textAlignment="center" />
-
-                <ImageView
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/db_inventory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <!--col2 row5-->
-        <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
-            app:cardBackgroundColor="@color/cardBackground"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="4dp"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/db_card_title"
-                    android:text="Sample"
-                    android:textColor="@color/primaryTextColor"
-                    android:textAlignment="center" />
-
-                <ImageView
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/db_inventory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-        <!--col1 row6-->
-        <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
-            app:cardBackgroundColor="@color/cardBackground"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="4dp"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/db_card_title"
-                    android:text="Sample"
-                    android:textColor="@color/primaryTextColor"
-                    android:textAlignment="center" />
-
-                <ImageView
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/db_inventory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <!--col2 row6-->
-        <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
-            app:cardBackgroundColor="@color/cardBackground"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="4dp"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/db_card_title"
-                    android:text="Sample"
-                    android:textColor="@color/primaryTextColor"
-                    android:textAlignment="center" />
-
-                <ImageView
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/db_inventory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
 
     </android.support.v7.widget.GridLayout>
 
