--- a/app/src/main/res/layout/activity_secondary.xml
+++ b/app/src/main/res/layout/activity_secondary.xml
@@ -5,7 +5,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SecondaryActivity">
+    tools:context=".SecondaryActivity"
+    >
 
 <!--Unsure about where to put the appbar-->
     <!--<android.support.design.widget.AppBarLayout
