--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -71,7 +71,7 @@
                             android:id="@+id/sender_pic_imgView1"
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:src="@drawable/gayal"
+                            android:src="@drawable/db_inventory"
                             android:elevation="4dp"
 
                             app:civ_border_color="#BDBDBD"
@@ -168,7 +168,7 @@
                             android:id="@+id/sender_pic_imgView3"
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:src="@drawable/ayyoob"
+                            android:src="@drawable/db_inventory"
                             android:elevation="4dp"
 
                             app:civ_border_color="#BDBDBD"
@@ -264,7 +264,7 @@
                             android:id="@+id/sender_pic_imgView2"
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:src="@drawable/chandula"
+                            android:src="@drawable/db_inventory"
                             android:elevation="4dp"
                             app:civ_border_color="#BDBDBD"
                             app:civ_border_width="1dp"
@@ -359,7 +359,7 @@
                             android:id="@+id/sender_pic_imgView4"
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:src="@drawable/harshan"
+                            android:src="@drawable/db_inventory"
                             android:elevation="4dp"
 
                             app:civ_border_color="#BDBDBD"
@@ -455,7 +455,7 @@
                             android:id="@+id/sender_pic_imgView5"
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:src="@drawable/dc_pic"
+                            android:src="@drawable/db_inventory"
                             android:elevation="4dp"
 
                             app:civ_border_color="#BDBDBD"
